force-app/main/default/objects/Registration_Account__c/fields/Physical_Business_Street__c.field-meta.xml
<CustomField>
    <fullName>Physical_Business_Street__c</fullName>
    <description>Map to Primary_Street_Placeholder__c	 on Account</description>
    <inlineHelpText>P.O. Box is not allowed.</inlineHelpText>
    <label>Physical Business Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>