force-app/main/default/objects/Registration_Account__c/fields/PresidentsName__c.field-meta.xml
<CustomField>
    <fullName>PresidentsName__c</fullName>
    <label>President Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>