force-app/main/default/objects/Registration_Account__c/fields/Production_Titles__c.field-meta.xml
<CustomField>
    <fullName>Production_Titles__c</fullName>
    <description>Titles currently producing or in production for the permit duration.</description>
    <label>Production Titles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>