force-app/main/default/objects/Registration_Account__c/fields/Qualified_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Trainer__c</fullName>
    <description>Used for Registration Account record type Trainer in VIP form tool</description>
    <label>Qualified Trainer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Meets Qualification</fullName>
            </value>
            <value>
                <fullName>No - Does not meet Qualification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>