force-app/main/default/objects/Registration_Account__c/fields/Request_FLC_Card__c.field-meta.xml
<CustomField>
    <fullName>Request_FLC_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to request for a FLC card for Manager</description>
    <inlineHelpText>If you are an Owner, do not request a duplicate FLC card here, this will lead to additional fees</inlineHelpText>
    <label>Request FLC Card</label>
    <type>Checkbox</type>
</CustomField>