force-app/main/default/objects/Registration_Account__c/fields/Residential_City__c.field-meta.xml
<CustomField>
    <fullName>Residential_City__c</fullName>
    <label>Residential City / Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>