force-app/main/default/objects/Registration_Account__c/fields/Residential_Phone__c.field-meta.xml
<CustomField>
    <fullName>Residential_Phone__c</fullName>
    <description>Residential Phone</description>
    <inlineHelpText>Phone number must be 10 numbers (no dashes or spaces.)</inlineHelpText>
    <label>Residential Phone</label>
    <type>Phone</type>
</CustomField>