force-app/main/default/objects/Registration_Account__c/fields/Residential_State__c.field-meta.xml
<CustomField>
    <fullName>Residential_State__c</fullName>
    <label>Residential State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Abbreviations</valueSetName>
    </valueSet>
</CustomField>