force-app/main/default/objects/Registration_Account__c/fields/Residential_Street__c.field-meta.xml
<CustomField>
    <fullName>Residential_Street__c</fullName>
    <inlineHelpText>P.O. Box address is not allowed.</inlineHelpText>
    <label>Residential Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>