force-app/main/default/objects/Registration_Account__c/fields/Residential_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Residential_Zip_Code__c</fullName>
    <label>Residential Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>