force-app/main/default/objects/Registration_Account__c/fields/RetypeITIN__c.field-meta.xml
<CustomField>
    <fullName>RetypeITIN__c</fullName>
    <inlineHelpText>Please re-type your Individual Taxpayer Identification Number with no dashes or spaces.</inlineHelpText>
    <label>Re-type ITIN</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>