force-app/main/default/objects/Registration_Account__c/fields/Start_Date_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_Operation__c</fullName>
    <description>Used in Garment Registration</description>
    <inlineHelpText>Enter Start date of Operation</inlineHelpText>
    <label>Start Date of Operation</label>
    <type>Date</type>
</CustomField>