force-app/main/default/objects/Registration_Account__c/fields/Subcontract_Franchisee_Registration_Num__c.field-meta.xml
<CustomField>
    <fullName>Subcontract_Franchisee_Registration_Num__c</fullName>
    <label>Subcontract/Franchisee Registration Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>