force-app/main/default/objects/Registration_Account__c/fields/Subcontractor_Franchisee_Name__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Franchisee_Name__c</fullName>
    <label>Subcontractor/Franchisee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>