force-app/main/default/objects/Registration_Account__c/fields/Subcontractor_Type__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Type__c</fullName>
    <label>Subcontractor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subcontractor</fullName>
            </value>
            <value>
                <fullName>Other Independent Contractor</fullName>
            </value>
            <value>
                <fullName>Franchisee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>