force-app/main/default/objects/Registration_Account__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <formula>IF(
RecordType.Name="Sole Proprietorship",
LEFT(First_Name__c,3)+LEFT(Last_Name__c,3)+MID(Residential_Phone__c,2,3)+MID(Residential_Phone__c,7,3)+MID(Residential_Phone__c,11,4),
IF(
(RecordType.Name="Corp or LLC" ||
RecordType.Name="Joint Venture" ||
RecordType.Name="Limited Partnership" ||
RecordType.Name="Partnership" ||
RecordType.Name="Parent Company"),
LEFT(First_Name__c,3)+LEFT(Last_Name__c,3)+LEFT(Federal_Employer_Identification_Number__c,9),null))</formula>
    <label>Unique ID</label>
    <type>Text</type>
</CustomField>