force-app/main/default/objects/Registration_Account__c/fields/Vehicle_Body_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Body_Type__c</fullName>
    <description>Vehicle Body Type</description>
    <label>Vehicle Body Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>