force-app/main/default/objects/Registration_Account__c/fields/Vehicle_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Identification_Number__c</fullName>
    <description>Vehicle Identification Number</description>
    <inlineHelpText>Vehicle Identification Number (VIN)</inlineHelpText>
    <label>Vehicle Identification Number (VIN)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>