force-app/main/default/objects/Registration_Account__c/fields/Vehicle_License_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_License_Plate_Number__c</fullName>
    <description>Vehicle License Plate Number</description>
    <label>Vehicle License Plate Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>