force-app/main/default/objects/Registration_Account__c/fields/Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make__c</fullName>
    <description>Vehicle Make</description>
    <label>Vehicle Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>