force-app/main/default/objects/Registration_Account__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <description>Vehicle Model</description>
    <label>Vehicle Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>