force-app/main/default/objects/Registration_Account__c/fields/Vehicle_Seating_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Seating_Capacity__c</fullName>
    <description>Vehicle Seating Capacity</description>
    <label>Vehicle Seating Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>