force-app/main/default/objects/Registration_Account__c/fields/Vehicle_Year__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Year__c</fullName>
    <description>Vehicle Year</description>
    <label>Vehicle Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>