force-app/main/default/objects/Registration_Account__c/fields/VIPAgentForProcess__c.field-meta.xml
<CustomField>
    <fullName>VIPAgentForProcess__c</fullName>
    <formula>IF(RecordType.Name = "Agent for Process", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIPAgentForProcess</label>
    <type>Checkbox</type>
</CustomField>