force-app/main/default/objects/Registration_Account__c/fields/VIPCustomer__c.field-meta.xml
<CustomField>
    <fullName>VIPCustomer__c</fullName>
    <formula>IF(RecordType.Name = "Customer/Business", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIPCustomer</label>
    <type>Checkbox</type>
</CustomField>