force-app/main/default/objects/Registration_Account__c/fields/VIPDriver__c.field-meta.xml
<CustomField>
    <fullName>VIPDriver__c</fullName>
    <formula>IF(RecordType.Name = "Driver", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIPDriver</label>
    <type>Checkbox</type>
</CustomField>