force-app/main/default/objects/Registration_Account__c/fields/VIPGPorJVJointVenture__c.field-meta.xml
<CustomField>
    <fullName>VIPGPorJVJointVenture__c</fullName>
    <description>Used in the PW Registration Form Tool.</description>
    <formula>IF(ISPICKVAL(Joint_Venture_Company_Type__c, "Joint Venture"),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP GP or JV Joint Venture</label>
    <type>Checkbox</type>
</CustomField>