force-app/main/default/objects/Registration_Account__c/fields/VIPGPorJVSP__c.field-meta.xml
<CustomField>
    <fullName>VIPGPorJVSP__c</fullName>
    <description>Used in the PW Registration Form</description>
    <formula>IF(ISPICKVAL(Joint_Venture_Company_Type__c, "Sole Proprietorship"),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP GP or JV SP</label>
    <type>Checkbox</type>
</CustomField>