force-app/main/default/objects/Registration_Account__c/fields/VIPGrower__c.field-meta.xml
<CustomField>
    <fullName>VIPGrower__c</fullName>
    <formula>IF(RecordType.Name = "Grower", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIPGrower</label>
    <type>Checkbox</type>
</CustomField>