force-app/main/default/objects/Registration_Account__c/fields/VIPIndividualEntity__c.field-meta.xml
<CustomField>
    <fullName>VIPIndividualEntity__c</fullName>
    <formula>IF(RecordType.Name = "Individual Entity", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIPIndividualEntity</label>
    <type>Checkbox</type>
</CustomField>