force-app/main/default/objects/Registration_Account__c/fields/VIPManagementIndividual__c.field-meta.xml
<CustomField>
    <fullName>VIPManagementIndividual__c</fullName>
    <formula>IF(RecordType.Name = "Management Individual", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Management Individual</label>
    <type>Checkbox</type>
</CustomField>