force-app/main/default/objects/Registration_Account__c/fields/VIPOtherBusiness__c.field-meta.xml
<CustomField>
    <fullName>VIPOtherBusiness__c</fullName>
    <formula>IF(RecordType.Name = "Other Business", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIPOtherBusiness</label>
    <type>Checkbox</type>
</CustomField>