force-app/main/default/objects/Registration_Account__c/fields/VIPPartnership__c.field-meta.xml
<CustomField>
    <fullName>VIPPartnership__c</fullName>
    <formula>IF(RecordType.Name = "Partnership", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Partnership</label>
    <type>Checkbox</type>
</CustomField>