force-app/main/default/objects/Registration_Account__c/fields/VIPSoleProprietorship__c.field-meta.xml
<CustomField>
    <fullName>VIPSoleProprietorship__c</fullName>
    <formula>IF( RecordType.DeveloperName  = "Sole_Proprietorship", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Sole Proprietorship</label>
    <type>Checkbox</type>
</CustomField>