force-app/main/default/objects/Registration_Account__c/fields/VIPTrainer__c.field-meta.xml
<CustomField>
    <fullName>VIPTrainer__c</fullName>
    <formula>IF(RecordType.Name = "Trainer", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIPTrainer</label>
    <type>Checkbox</type>
</CustomField>