force-app/main/default/objects/Registration_Account__c/fields/VIPVehicle__c.field-meta.xml
<CustomField>
    <fullName>VIPVehicle__c</fullName>
    <formula>IF(RecordType.Name = "Vehicle", true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIPVehicle</label>
    <type>Checkbox</type>
</CustomField>