force-app/main/default/objects/Registration_Account__c/fields/Weight_In_Pounds__c.field-meta.xml
<CustomField>
    <fullName>Weight_In_Pounds__c</fullName>
    <label>Weight In Pounds</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>