force-app/main/default/objects/Registration_Account__c/recordTypes/Agent_for_Process.recordType-meta.xml
<RecordType>
    <fullName>Agent_for_Process</fullName>
    <active>true</active>
    <description>Garment Registration for Agent for Process</description>
    <label>Agent for Process</label>
</RecordType>