force-app/main/default/objects/Registration_Account__c/recordTypes/Corp_or_LLC.recordType-meta.xml
<RecordType>
    <fullName>Corp_or_LLC</fullName>
    <active>true</active>
    <label>Corp or LLC</label>
</RecordType>