force-app/main/default/objects/Registration_Account__c/recordTypes/County.recordType-meta.xml
<RecordType>
    <fullName>County</fullName>
    <active>true</active>
    <description>County listing for FLC</description>
    <label>County</label>
</RecordType>