force-app/main/default/objects/Registration_Account__c/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <label>Customer/Business</label>
</RecordType>