force-app/main/default/objects/Registration_Account__c/recordTypes/Driver.recordType-meta.xml
<RecordType>
    <fullName>Driver</fullName>
    <active>true</active>
    <description>Used in FLC to enter Drivers</description>
    <label>Driver</label>
</RecordType>