force-app/main/default/objects/Registration_Account__c/recordTypes/Family_Licenses.recordType-meta.xml
<RecordType>
    <fullName>Family_Licenses</fullName>
    <active>true</active>
    <description>Used in FLC for Family Licenses information</description>
    <label>Family Licenses</label>
</RecordType>