force-app/main/default/objects/Registration_Account__c/recordTypes/Grower.recordType-meta.xml
<RecordType>
    <fullName>Grower</fullName>
    <active>true</active>
    <description>Grower Item for FLC</description>
    <label>Grower</label>
</RecordType>