force-app/main/default/objects/Registration_Account__c/recordTypes/Individual_Entity.recordType-meta.xml
<RecordType>
    <fullName>Individual_Entity</fullName>
    <active>true</active>
    <description>Used in FLC to enter Entities</description>
    <label>Individual Entity</label>
</RecordType>