force-app/main/default/objects/Registration_Account__c/recordTypes/Individual_Permit.recordType-meta.xml
<RecordType>
    <fullName>Individual_Permit</fullName>
    <active>true</active>
    <label>Individual Permit</label>
</RecordType>