force-app/main/default/objects/Registration_Account__c/recordTypes/Labor_Camp_or_Lodging.recordType-meta.xml
<RecordType>
    <fullName>Labor_Camp_or_Lodging</fullName>
    <active>true</active>
    <description>Labor Camp or Lodging for FLC</description>
    <label>Labor Camp or Lodging</label>
</RecordType>