force-app/main/default/objects/Registration_Account__c/recordTypes/Limited_Partnership.recordType-meta.xml
<RecordType>
    <fullName>Limited_Partnership</fullName>
    <active>true</active>
    <label>Limited Partnership</label>
</RecordType>