force-app/main/default/objects/Registration_Account__c/recordTypes/Other_Business.recordType-meta.xml
<RecordType>
    <fullName>Other_Business</fullName>
    <active>true</active>
    <description>used for Garment Manufacturers and Contractors Registration</description>
    <label>Other Business</label>
</RecordType>