force-app/main/default/objects/Registration_Account__c/recordTypes/Production_Title.recordType-meta.xml
<RecordType>
    <fullName>Production_Title</fullName>
    <active>true</active>
    <description>Production Title or Show Name</description>
    <label>Production Title</label>
</RecordType>