force-app/main/default/objects/Registration_Account__c/recordTypes/Sole_Proprietorship.recordType-meta.xml
<RecordType>
    <fullName>Sole_Proprietorship</fullName>
    <active>true</active>
    <label>Sole Proprietorship</label>
</RecordType>