force-app/main/default/objects/Registration_Account__c/recordTypes/Subcontractors_Franchises.recordType-meta.xml
<RecordType>
    <fullName>Subcontractors_Franchises</fullName>
    <active>true</active>
    <label>Subcontractors Franchises</label>
</RecordType>