force-app/main/default/objects/Registration_Account__c/recordTypes/Trainer.recordType-meta.xml
<RecordType>
    <fullName>Trainer</fullName>
    <active>true</active>
    <description>Used in FLC to enter Trainer</description>
    <label>Trainer</label>
</RecordType>