force-app/main/default/objects/Registration_Account__c/recordTypes/Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Vehicle</fullName>
    <active>true</active>
    <description>Used in FLC to enter Vehicles</description>
    <label>Vehicle</label>
</RecordType>