force-app/main/default/objects/Registration_Account__c/validationRules/Address_cannot_have_PO_Box.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_cannot_have_PO_Box</fullName>
    <active>true</active>
    <description>Does not allow P.O Boxes to be added in address fields.</description>
    <errorConditionFormula>OR( 
CONTAINS( Physical_Business_Street__c, "PO BOX"), 
CONTAINS( Physical_Business_Line_2__c, "PO BOX"), 
CONTAINS( Residential_Street__c, "PO BOX"), 
CONTAINS( Residential_Address_Line_2__c, "PO BOX"), 
CONTAINS( Physical_Business_Street__c, "P.O Box"), 
CONTAINS( Physical_Business_Line_2__c, "P.O Box"), 
CONTAINS(  Residential_Street__c , "P.O Box"), 
CONTAINS( Residential_Address_Line_2__c, "P.O Box"), 
CONTAINS( Physical_Business_Street__c, "P.O. Box"), 
CONTAINS( Physical_Business_Line_2__c, "P.O. Box"), 
CONTAINS( Residential_Street__c, "P.O. Box"), 
CONTAINS( Residential_Address_Line_2__c, "P.O. Box"), 
CONTAINS( Physical_Business_Street__c , "po box"), 
CONTAINS( Physical_Business_Line_2__c, "po box"), 
CONTAINS( Residential_Street__c, "po box"), 
CONTAINS( Residential_Address_Line_2__c, "po box"), 
CONTAINS( Physical_Business_Street__c , "P.O. box"), 
CONTAINS( Physical_Business_Line_2__c, "P.O. box"), 
CONTAINS( Residential_Street__c, "P.O. box"), 
CONTAINS( Residential_Address_Line_2__c, "P.O. box"), 
CONTAINS( Physical_Business_Street__c , "p.o. box"), 
CONTAINS( Physical_Business_Line_2__c, "p.o. box"), 
CONTAINS( Residential_Street__c, "p.o. box"), 
CONTAINS( Residential_Address_Line_2__c, "p.o. box"), 
CONTAINS( Physical_Business_Street__c , "PO Box"), 
CONTAINS( Physical_Business_Line_2__c, "PO Box"), 
CONTAINS( Residential_Street__c, "PO Box"), 
CONTAINS( Residential_Address_Line_2__c, "PO Box"),
CONTAINS( Physical_Business_Street__c, "P. O. Box"), 
CONTAINS( Physical_Business_Line_2__c, "P. O. Box"), 
CONTAINS( Residential_Street__c, "P. O. Box"), 
CONTAINS( Residential_Address_Line_2__c, "P. O. Box"),
CONTAINS( Physical_Business_Street__c , "p o box"), 
CONTAINS( Physical_Business_Line_2__c, "p o box"), 
CONTAINS( Residential_Street__c, "p o box"), 
CONTAINS( Residential_Address_Line_2__c, "p o box"),   
CONTAINS( Physical_Business_Street__c , "p. o. box"), 
CONTAINS( Physical_Business_Line_2__c, "p. o. box"), 
CONTAINS( Residential_Street__c, "p. o. box"), 
CONTAINS( Residential_Address_Line_2__c, "p. o. box"),
CONTAINS( Physical_Business_Street__c, "P.O. BOX"), 
CONTAINS( Physical_Business_Line_2__c, "P.O. BOX"), 
CONTAINS( Residential_Street__c, "P.O. BOX"), 
CONTAINS( Residential_Address_Line_2__c, "P.O. BOX"),
CONTAINS( Physical_Business_Street__c, "P. O. BOX"), 
CONTAINS( Physical_Business_Line_2__c, "P. O. BOX"), 
CONTAINS( Residential_Street__c, "P. O. BOX"), 
CONTAINS( Residential_Address_Line_2__c, "P. O. BOX"),
CONTAINS( Physical_Business_Street__c, "P.O.Box"), 
CONTAINS( Physical_Business_Line_2__c, "P.O.Box"), 
CONTAINS( Residential_Street__c, "P.O.Box"), 
CONTAINS( Residential_Address_Line_2__c, "P.O.Box"),
CONTAINS( Physical_Business_Street__c, "P. O . Box"), 
CONTAINS( Physical_Business_Line_2__c, "P. O . Box"), 
CONTAINS( Residential_Street__c, "P. O . Box"), 
CONTAINS( Residential_Address_Line_2__c, "P. O . Box")
)</errorConditionFormula>
    <errorMessage>P.O. Boxes are not accepted addresses. Please change to a physical location before moving forward.</errorMessage>
</ValidationRule>