force-app/main/default/objects/Registration_Account__c/validationRules/City_cannot_contain_numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>City_cannot_contain_numbers</fullName>
    <active>true</active>
    <description>Prevents a user from entering numbers in the city field.</description>
    <errorConditionFormula>OR( 
NOT ( REGEX ( Physical_Business_City__c ,"[a-zA-Z ]*" )), 
NOT ( REGEX ( Physical_Business_City__c ,"[a-zA-Z ]*" )), 
NOT ( REGEX ( Residential_City__c ,"[a-zA-Z ]*" )) 
)</errorConditionFormula>
    <errorMessage>Please enter a valid city name.</errorMessage>
</ValidationRule>